# keystore-optee

./: .gitignore  LICENSE  README.md
ca/: CMakeLists.txt  keystoretool.c  vhash-get.c  vhash-store.c
ta/: Makefile  keystore.c  keystore.h  sub.mk  user_ta_header_defines.h
